RESOLVED FIXED221409
REGRESSION(r272217): clang warnings in ExtensionsGLOpenGLCommon.h
https://bugs.webkit.org/show_bug.cgi?id=221409
Summary REGRESSION(r272217): clang warnings in ExtensionsGLOpenGLCommon.h
Philippe Normand
Reported 2021-02-04 08:40:11 PST
In file included from DerivedSources/WebCore/unified-sources/UnifiedSource-3c72abbe-29.cpp:3: In file included from ../../Source/WebCore/platform/graphics/cairo/GraphicsContextGLCairo.cpp:29: In file included from ../../Source/WebCore/platform/graphics/opengl/GraphicsContextGLOpenGL.h:48: ../../Source/WebCore/platform/graphics/opengl/ExtensionsGLOpenGLCommon.h:59:10: warning: 'readnPixelsEXT' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] void readnPixelsEXT(int x, int y, GCGLsizei width, GCGLsizei height, GCGLenum format, GCGLenum type, GCGLsizei bufSize, void *data); ^ ../../Source/WebCore/platform/graphics/ExtensionsGL.h:304:18: note: overridden virtual function is here virtual void readnPixelsEXT(GCGLint x, GCGLint y, GCGLsizei width, GCGLsizei height, GCGLenum format, GCGLenum type, GCGLsizei bufSize, GCGLvoid* data) = 0; ^ In file included from DerivedSources/WebCore/unified-sources/UnifiedSource-3c72abbe-29.cpp:3: In file included from ../../Source/WebCore/platform/graphics/cairo/GraphicsContextGLCairo.cpp:29: In file included from ../../Source/WebCore/platform/graphics/opengl/GraphicsContextGLOpenGL.h:48: ../../Source/WebCore/platform/graphics/opengl/ExtensionsGLOpenGLCommon.h:60:10: warning: 'getnUniformfvEXT' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] void getnUniformfvEXT(GCGLuint program, int location, GCGLsizei bufSize, float *params); ^ ../../Source/WebCore/platform/graphics/ExtensionsGL.h:305:18: note: overridden virtual function is here virtual void getnUniformfvEXT(GCGLuint program, GCGLint location, GCGLsizei bufSize, GCGLfloat* params) = 0; ^ In file included from DerivedSources/WebCore/unified-sources/UnifiedSource-3c72abbe-29.cpp:3: In file included from ../../Source/WebCore/platform/graphics/cairo/GraphicsContextGLCairo.cpp:29: In file included from ../../Source/WebCore/platform/graphics/opengl/GraphicsContextGLOpenGL.h:48: ../../Source/WebCore/platform/graphics/opengl/ExtensionsGLOpenGLCommon.h:61:10: warning: 'getnUniformivEXT' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] void getnUniformivEXT(GCGLuint program, int location, GCGLsizei bufSize, int *params); ^ ../../Source/WebCore/platform/graphics/ExtensionsGL.h:306:18: note: overridden virtual function is here virtual void getnUniformivEXT(GCGLuint program, GCGLint location, GCGLsizei bufSize, GCGLint* params) = 0; ^ 3 warnings generated.
Attachments
Patch (2.02 KB, patch)
2021-02-04 09:00 PST, Philippe Normand
no flags
Philippe Normand
Comment 1 2021-02-04 09:00:40 PST
Darin Adler
Comment 2 2021-02-04 09:37:15 PST
Comment on attachment 419285 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=419285&action=review > Source/WebCore/platform/graphics/opengl/ExtensionsGLOpenGLCommon.h:61 > + void readnPixelsEXT(int x, int y, GCGLsizei width, GCGLsizei height, GCGLenum format, GCGLenum type, GCGLsizei bufSize, void *data) override; > + void getnUniformfvEXT(GCGLuint program, int location, GCGLsizei bufSize, float *params) override; > + void getnUniformivEXT(GCGLuint program, int location, GCGLsizei bufSize, int *params) override; If any of these can be final instead, that would be even better.
EWS
Comment 3 2021-02-04 09:39:54 PST
Committed r272374: <https://trac.webkit.org/changeset/272374> All reviewed patches have been landed. Closing bug and clearing flags on attachment 419285 [details].
Kimmo Kinnunen
Comment 4 2021-02-04 23:43:45 PST
Thanks for fixing!
Note You need to log in before you can comment on or make changes to this bug.