REGRESSION(r272217): clang warnings in ExtensionsGLOpenGLCommon.h https://bugs.webkit.org/show_bug.cgi?id=221409

Patch by Philippe Normand <pnormand@igalia.com> on 2021-02-04
Reviewed by Darin Adler.

* platform/graphics/opengl/ExtensionsGLOpenGLCommon.h: Re-add the override qualifier for a
few methods, which was removed in r272217.

Canonical link: https://commits.webkit.org/233702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272374 268f45cc-cd09-0410-ab3c-d52691b4dbfc